--- a/strona/index.html
+++ b/strona/index.html
@@ -476,7 +476,7 @@
                     <h2 class="gallery-title">Postęp Prac</h2>
                     <p>Zajrzyj do galerii, aby zobaczyć nad czym obecnie pracujemy!</p>
                     <div class="gallery-grid">
-                        <div class="gallery-item" onclick="openModal('preview1.jpg', 'Wnętrze słowiańskiej chaty', 'Autentyczne wnętrze chaty słowiańskiej z elementami rustykalnego wyposażenia. Wykonana z drewna dębowego, zawiera podstawowe sprzęty domowe oraz miejsce na ognisko służące do przygotowywania posiłków.')">
+                        <div class="gallery-item" onclick="openModal('preview1.jpg', 'Nowy system ścinania drzew!', 'Rozwijaj swoje umiejętności drwala i odblokuj nowe możliwości! Postęp ścinania drzewa jest teraz widoczny w procentach obok paska narzędzi, co pozwala Ci śledzić swoje osiągnięcia w czasie rzeczywistym. Dodatkowo wprowadziliśmy immersyjne komendy /do oraz /me, które wzbogacą Twoje doświadczenie w grze.')">
                             <img src="images/preview1.jpg" alt="Podgląd prac 1">
                         </div>
                         <div class="gallery-item" onclick="openModal('preview2.jpg', 'Broń i wyposażenie', 'Zestaw broni i narzędzi dostępnych dla graczy. Na serwerze dostępne będą autentyczne przedmioty z epoki słowiańskiej, każdy z różnymi właściwościami i zastosowaniami podczas rozgrywki.')">
