--- a/strona/index.html
+++ b/strona/index.html
@@ -431,18 +431,7 @@
         <div class="container">
             <div class="coming-soon">
                 <h1>Serwer w Budowie</h1>
-                <p>Witaj w świecie SlavicRP! Zapraszamy Cię do wyjątkowego projektu – słowiańskiego serwera Minecraft Roleplay, który obecnie znajduje się w fazie tworzenia. Nasz zespół z pasją pracuje nad tym, aby przenieść Cię w fascynujący świat dawnych Słowian, pełen autentycznych detali i niepowtarzalnej atmosfery.  Co dla Ciebie szykujemy?  
-
-                    
-Unikalne doświadczenie RP: Odtworzymy realia słowiańskiej kultury, historii i tradycji.  
-
-Dopracowany świat: Starannie budujemy otoczenie, które odda ducha tamtych czasów.  
-
-Zaangażowanie społeczności: Twoje opinie i pomysły pomogą nam kształtować serwer.
-
-Na ten moment trwają intensywne prace, ale już niedługo otworzymy drzwi do tej wyjątkowej przygody. Śledź nasze postępy i przygotuj się na podróż w głąb słowiańskiej historii!
-
-</p>
+                <p>Witaj w świecie SlavicRP! Zapraszamy Cię do wyjątkowego projektu – słowiańskiego serwera Minecraft Roleplay, który obecnie znajduje się w fazie tworzenia. Nasz zespół z pasją pracuje nad tym, aby przenieść Cię w fascynujący świat dawnych Słowian, pełen autentycznych detali i niepowtarzalnej atmosfery. Szykujemy dla Ciebie unikalne doświadczenie RP, odtwarzając realia słowiańskiej kultury, historii i tradycji, a także dopracowany świat, który odda ducha tamtych czasów. Twoja opinia i pomysły pomogą nam kształtować ten projekt. Na ten moment trwają intensywne prace, ale już niedługo otworzymy drzwi do tej wyjątkowej przygody. Śledź nasze postępy i przygotuj się na podróż w głąb słowiańskiej historii!</p>
                 
                 <div class="progress-container">
                     <div class="progress-title">
