--- a/strona/index.html
+++ b/strona/index.html
@@ -497,10 +497,10 @@
                     <p>Zajrzyj do galerii, aby zobaczyć nad czym obecnie pracujemy!</p>
                     <div class="gallery-grid">
                         <!-- Zauważ, że teraz mamy inne obrazki w miniaturce (preview1.jpg) i w modalu (full1.jpg) -->
-                        <div class="gallery-item" data-full-image="full1.jpg" data-title="Wnętrze słowiańskiej chaty" data-description="Autentyczne wnętrze chaty słowiańskiej z elementami rustykalnego wyposażenia. Wykonana z drewna dębowego, zawiera podstawowe sprzęty domowe oraz miejsce na ognisko służące do przygotowywania posiłków.">
+                        <div class="gallery-item" data-full-image="full1.jpg" data-title="Nowy system ścinania drzew już dostępny!" data-description="Rozwijaj swoje umiejętności drwala i odblokuj nowe możliwości! Postęp ścinania drzewa jest teraz widoczny w procentach obok paska narzędzi, co pozwala Ci śledzić swoje osiągnięcia w czasie rzeczywistym. Dodatkowo wprowadziliśmy immersyjne komendy /do oraz /me, które wzbogacą Twoje doświadczenie w grze. Dołącz i sprawdź nowości już dziś!">
                             <img src="images/preview1.jpg" alt="Podgląd prac 1">
                         </div>
-                        <div class="gallery-item" data-full-image="full2.jpg" data-title="Broń i wyposażenie" data-description="Zestaw broni i narzędzi dostępnych dla graczy. Na serwerze dostępne będą autentyczne przedmioty z epoki słowiańskiej, każdy z różnymi właściwościami i zastosowaniami podczas rozgrywki.">
+                        <div class="gallery-item" data-full-image="full2.jpg" data-title="Nowy system picia wody i ogrzania się już dostępny!" data-description="Rozwijaj swoje umiejętności przetrwania i zmierz się z nowymi wyzwaniami! Od teraz śledź swoje podstawowe potrzeby w czasie rzeczywistym – poziomy Głodu, Nawodnienia i Ciepła zobaczysz w procentach na pasku statusu obok narzędzi. Dbaj o wodę, by podnieść nawodnienie, i szukaj ciepła, by utrzymać wysoki poziom ciepła.">
                             <img src="images/preview2.jpg" alt="Podgląd prac 2">
                         </div>
                         <div class="gallery-item" data-full-image="full3.jpg" data-title="Osada słowiańska" data-description="Główna osada graczy. Tutaj odbywać się będą najważniejsze wydarzenia, handel oraz interakcje między postaciami. Każdy budynek ma swoje unikalne przeznaczenie i funkcję w społeczności.">
