--- a/strona/index.html
+++ b/strona/index.html
@@ -503,7 +503,7 @@
                         <div class="gallery-item" data-full-image="full2.jpg" data-title="Nowy system picia wody i ogrzania się już dostępny!" data-description="Doskonal swoje umiejętności przetrwania i staw czoła nowym wyzwaniom! Od teraz kontroluj swoje podstawowe potrzeby na bieżąco – poziomy Głodu, Nawodnienia i Ciepła widoczne są w procentach na pasku statusu obok narzędzi. Utrzymuj nawodnienie, korzystając z wody, i dbaj o ciepło, tworząć ognisko.">
                             <img src="images/preview2.jpg" alt="Podgląd prac 2">
                         </div>
-                        <div class="gallery-item" data-full-image="full3.jpg" data-title="Osada słowiańska" data-description="Główna osada graczy. Tutaj odbywać się będą najważniejsze wydarzenia, handel oraz interakcje między postaciami. Każdy budynek ma swoje unikalne przeznaczenie i funkcję w społeczności.">
+                        <div class="gallery-item" data-full-image="full3.jpg" data-title="Nowy system immersyjności z komendami /me, /do i /k już aktywny!" data-description="Wzbogać swoją przygodę w SlavicRP dzięki nowym narzędziom do odgrywania roli! Wprowadzamy system immersyjności z komendami /me, /do oraz /k, które pozwolą Ci jeszcze głębiej wczuć się w klimat słowiańskiego świata. Używaj /me, by opisać swoje emocje i działania, /do, by oddać wydarzenia wokół Ciebie, a /k, by krzyknąć i zwrócić uwagę innych w fabularny sposób. Te funkcje sprawią, że każda interakcja stanie się bardziej realistyczna i pełna emocji. Dołącz i odkryj nowe możliwości już teraz!">
                             <img src="images/preview3.jpg" alt="Podgląd prac 3">
                         </div>
                     </div>
