--- a/strona/index.html
+++ b/strona/index.html
@@ -11,7 +11,8 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="images/logo.png" alt="SlavicRP Logo">
+                <!-- Tymczasowo używamy obrazu zastępczego -->
+<img src="https://via.placeholder.com/50" alt="SlavicRP Logo">
                 Slavic<span>RP</span>
             </div>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -164,19 +165,22 @@
         <div class="container">
             <h2 class="section-title">Galeria <span>Projektu</span></h2>
             <p style="text-align: center; max-width: 800px; margin: 0 auto;">Zajrzyj do naszej galerii, aby zobaczyć postęp prac nad serwerem SlavicRP. Publikujemy regularnie nowe zdjęcia, aby być na bieżąco z rozwojem projektu.</p>
+            <p style="text-align: center; margin-top: 15px; color: var(--accent); font-style: italic;">
+                <i class="fas fa-info-circle"></i> Kliknij na dowolny obrazek, aby zobaczyć więcej szczegółów i informacji!
+            </p>
             
             <div class="gallery-container">
                 <div class="gallery-grid">
-                    <div class="gallery-item" data-full="images/full1.jpg" data-title="Nowy system ścinania drzew już dostępny!" data-description="Rozwijaj swoje umiejętności drwala i odblokuj nowe możliwości! Postęp ścinania drzewa jest teraz widoczny w procentach obok paska narzędzi, co pozwala Ci śledzić swoje osiągnięcia w czasie rzeczywistym. Dodatkowo wprowadziliśmy immersyjne komendy /do oraz /me, które wzbogacą Twoje doświadczenie w grze. Dołącz i sprawdź nowości już dziś!">
-                        <img src="images/thumbnail1.jpg" alt="Ścinanie drzew">
+                    <div class="gallery-item" data-full="./images/full1.jpg" data-title="Nowy system ścinania drzew już dostępny!" data-description="Rozwijaj swoje umiejętności drwala i odblokuj nowe możliwości! Postęp ścinania drzewa jest teraz widoczny w procentach obok paska narzędzi, co pozwala Ci śledzić swoje osiągnięcia w czasie rzeczywistym. Dodatkowo wprowadziliśmy immersyjne komendy /do oraz /me, które wzbogacą Twoje doświadczenie w grze. Dołącz i sprawdź nowości już dziś!">
+                        <img src="https://via.placeholder.com/400x300?text=System+ścinania+drzew" alt="Ścinanie drzew">
                         <div class="gallery-caption">System ścinania drzew</div>
                     </div>
-                    <div class="gallery-item" data-full="images/full2.jpg" data-title="Nowy system picia wody i ogrzania się już dostępny!" data-description="Doskonal swoje umiejętności przetrwania i staw czoła nowym wyzwaniom! Od teraz kontroluj swoje podstawowe potrzeby na bieżąco – poziomy Głodu, Nawodnienia i Ciepła widoczne są w procentach na pasku statusu obok narzędzi. Utrzymuj nawodnienie, korzystając z wody, i dbaj o ciepło, tworząć ognisko.">
-                        <img src="images/thumbnail2.jpg" alt="System przetrwania">
+                    <div class="gallery-item" data-full="./images/full2.jpg" data-title="Nowy system picia wody i ogrzania się już dostępny!" data-description="Doskonal swoje umiejętności przetrwania i staw czoła nowym wyzwaniom! Od teraz kontroluj swoje podstawowe potrzeby na bieżąco – poziomy Głodu, Nawodnienia i Ciepła widoczne są w procentach na pasku statusu obok narzędzi. Utrzymuj nawodnienie, korzystając z wody, i dbaj o ciepło, tworząć ognisko.">
+                        <img src="https://via.placeholder.com/400x300?text=System+przetrwania" alt="System przetrwania">
                         <div class="gallery-caption">System przetrwania</div>
                     </div>
-                    <div class="gallery-item" data-full="images/full3.jpg" data-title="Nowy system immersyjności z komendami /me, /do i /k już aktywny!" data-description="Wzbogać swoją przygodę w SlavicRP dzięki nowym narzędziom do odgrywania roli! Wprowadzamy system immersyjności z komendami /me, /do oraz /k, które pozwolą Ci jeszcze głębiej wczuć się w klimat słowiańskiego świata. Używaj /me, by opisać swoje emocje i działania, /do, by oddać wydarzenia wokół Ciebie, a /k, by krzyknąć i zwrócić uwagę innych w fabularny sposób. Te funkcje sprawią, że każda interakcja stanie się bardziej realistyczna i pełna emocji.">
-                        <img src="images/thumbnail3.jpg" alt="Komendy roleplay">
+                    <div class="gallery-item" data-full="./images/full3.jpg" data-title="Nowy system immersyjności z komendami /me, /do i /k już aktywny!" data-description="Wzbogać swoją przygodę w SlavicRP dzięki nowym narzędziom do odgrywania roli! Wprowadzamy system immersyjności z komendami /me, /do oraz /k, które pozwolą Ci jeszcze głębiej wczuć się w klimat słowiańskiego świata. Używaj /me, by opisać swoje emocje i działania, /do, by oddać wydarzenia wokół Ciebie, a /k, by krzyknąć i zwrócić uwagę innych w fabularny sposób. Te funkcje sprawią, że każda interakcja stanie się bardziej realistyczna i pełna emocji.">
+                        <img src="https://via.placeholder.com/400x300?text=Komendy+roleplay" alt="Komendy roleplay">
                         <div class="gallery-caption">Komendy roleplay</div>
                     </div>
                 </div>
@@ -377,7 +381,7 @@
         // Funkcja otwierająca modal
         function openModal(imageSrc, title, description) {
             modal.style.display = "block";
-            modalImg.src = imageSrc;
+            modalImg.src = imageSrc || "https://via.placeholder.com/800x600?text=Pełny+widok";
             modalTitle.textContent = title;
             modalDescription.textContent = description;
             document.body.style.overflow = "hidden"; // Blokuje przewijanie strony pod modalem
