--- a/strona/index.html
+++ b/strona/index.html
@@ -6,6 +6,7 @@
     <title>SlavicRP - Słowiański Serwer Minecraft Roleplay</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
