--- a/strona/index.html
+++ b/strona/index.html
@@ -35,13 +35,8 @@
                 <h1>Słowiański świat <span>Minecraft Roleplay</span></h1>
                 <p>Witaj w świecie SlavicRP! Przenieś się w czasie do świata dawnych Słowian, doświadcz ich kultury, rzemiosła i wierzeń. Eksploruj rozległe słowiańskie krainy, buduj swoje osady i twórz własną legendę w naszym immersyjnym serwerze roleplay.</p>
                 
-                <div class="ip-display">
-                    <p id="server-ip">srv731529.hstgr.cloud:25565</p>
-                    <button class="copy-btn" onclick="copyIP()"><i class="fas fa-copy"></i></button>
-                </div>
-                
                 <div class="cta-buttons">
-                    <a href="#join" class="btn btn-primary">Dołącz teraz</a>
+                    <a href="#" class="btn btn-discord"><i class="fab fa-discord"></i> Dołącz na Discord</a>
                     <a href="#progress" class="btn btn-secondary">Sprawdź postęp</a>
                 </div>
             </div>
@@ -82,7 +77,7 @@
                 <div class="progress-bar-container">
                     <div class="progress-bar-title">
                         <span>Całkowity postęp</span>
-                        <span>35%</span>
+                        <span>100%</span>
                     </div>
                     <div class="progress-bar">
                         <div class="progress-bar-fill" style="width: 35%;">
